@startuml
skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam classFontSize 20
hide circle

interface Command <<interface>> {
    + execute(ItemList items, CategoryList categories, Ui ui): void
}

class HelpCommand {
    {static} - HELPSUMMARYMESSAGE: String = "Command names and their summaries:..."
    {static} - HELPADDITEMMESSAGE: String = "addItem:..."
    {static} - HELPDELETEITEMMESSAGE: String = "deleteItem:..."
    {static} - HELPEDITDESCRIPTIONMESSAGE: String = "editDescription:..."
    {static} - HELPEDITPRICEMESSAGE: String = "editPrice:..."
    {static} - HELPEDITQUANTITYMESSAGE: String = "editQuantity:..."
    {static} - HELPEDITCATEGORYMESSAGE: String = "editCategory:..."
    {static} - HELPADDCATEGORYMESSAGE: String = "addCategory:..."
    {static} - HELPDELETECATEGORYMESSAGE: String = "deleteCategory:..."
    {static} - HELPLISTCATEGORIESMESSAGE: String = "listCategories:..."
    {static} - HELPFINDITEMMESSAGE: String = "findItem:..."
    {static} - HELPFILTERITEMMESSAGE: String = "filterItem:..."
    {static} - HELPTRANSACTMESSAGE: String = "transact:..."
    {static} - HELPSHOWHISTORYMESSAGE: String = "showHistory:..."
    {static} - HELPLISTITEMSMESSAGE: String = "listItems:..."
    {static} - HELPHELPMESSAGE: String = "help:..."
    {static} - HELPEXITMESSAGE: String = "exit:..."
    {static} - COMMANDMESSAGES: Map<String, String>
    - input: String
    + HelpCommand(input: String)
    + execute(ItemList items, CategoryList categories, Ui ui): void
}

interface Validator <<interface>> {
    + validate(ItemList items, CategoryList categories): void
}

class HelpCommandValidator {
    - input: String
    + HelpCommandValidator(input: String)
    + validate(ItemList items, CategoryList categories): void
    - validateCommandSpecified(words: String[]): void
    - isValidCommand(word: String): boolean
}

enum CommandWord <<enumeration>> {
    - word: String
    --
    - CommandWord(word: String)
    + getWord(): String
    --
    ADD_ITEM("addItem")
    DELETE_ITEM("deleteItem")
    EDIT_DESCRIPTION("editDescription")
    EDIT_PRICE("editPrice")
    EDIT_QUANTITY("editQuantity")
    EDIT_CATEGORY("editCategory")
    ADD_CATEGORY("addCategory")
    DELETE_CATEGORY("deleteCategory")
    LIST_CATEGORIES("listCategories")
    TRANSACT("transact")
    SHOW_HISTORY("showHistory")
    LIST_ITEMS("listItems")
    HELP("help")
    EXIT("exit")
    FIND_ITEM("findItem")
    FILTER_ITEM("filterItem")
}

class ItemList

class Ui {
    + showMessage(message: String): void
}

Command <|.. HelpCommand
Validator <|.. HelpCommandValidator

HelpCommand .right.> HelpCommandValidator : <<creates>>
HelpCommand ..> Ui : <<uses>>
HelpCommand ..> ItemList : <<uses>>

HelpCommandValidator ..> CommandWord : <<uses>>
HelpCommandValidator ..> ItemList : <<uses>>

@enduml